apps/gitlab/deployment-default-gitlab-kas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitlab
    component: kas
  name: gitlab-kas
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: gitlab
      component: kas
  template:
    metadata:
      annotations:
        elastic.co/dataset: kubernetes.container_logs.gitlab
        prometheus.io/path: /metrics
        prometheus.io/port: "8151"
        prometheus.io/scrape: "true"
      labels:
        app: gitlab
        component: kas
    spec:
      automountServiceAccountToken: false
      containers:
      - args:
        - --configuration-file=/etc/kas/config.yaml
        image: registry.gitlab.com/gitlab-org/build/cng/gitlab-kas:placeholder
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /liveness
            port: 8151
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 5
        name: kas
        ports:
        - containerPort: 8150
          name: kas
          protocol: TCP
        - containerPort: 8154
          name: kas-k8s-api
          protocol: TCP
        - containerPort: 8155
          name: kas-private
          protocol: TCP
        - containerPort: 8151
          name: metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /readiness
            port: 8151
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 65534
          runAsNonRoot: true
          runAsUser: 65532
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/kas
          name: kas-config
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 65532
        runAsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65532
      terminationGracePeriodSeconds: 300
      volumes:
      - name: kas-config
        projected:
          defaultMode: 0440
          sources:
          - configMap:
              name: gitlab-kas-config
          - secret:
              items:
              - key: kas_shared_secret
                path: .gitlab_kas_secret
              name: gitlab-kas-secret
          - secret:
              items:
              - key: kas_private_api_secret
                path: .gitlab_kas_private_api_secret
              name: gitlab-kas-private-api
          - secret:
              items:
              - key: kas_websocket_token_secret
                path: .gitlab_kas_websocket_token_secret
              name: gitlab-kas-websocket-token
