apps/gitlab/deployment-default-gitlab-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitlab
    component: registry
  name: gitlab-registry
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: gitlab
      component: registry
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        elastic.co/dataset: kubernetes.container_logs.gitlab
      labels:
        app: gitlab
        component: registry
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: REGISTRY_CONFIGURATION_PATH
          value: /etc/docker/registry/config.yml
        image: registry.gitlab.com/gitlab-org/build/cng/gitlab-container-registry:v18.11.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          tcpSocket:
            port: 5000
          timeoutSeconds: 1
        name: registry
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 5000
          timeoutSeconds: 1
        resources:
          limits:
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 64Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/docker/registry
          mountPropagation: None
          name: registry-config
        - mountPath: /var/lib/registry
          mountPropagation: HostToContainer
          name: registry-data
        - mountPath: /etc/docker/registry/certs
          mountPropagation: None
          name: registry-auth
          readOnly: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: false
        runAsUser: 1000
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: gitlab-registry-config
          optional: false
        name: registry-config
      - name: registry-data
        persistentVolumeClaim:
          claimName: gitlab-registry-sw
      - name: registry-auth
        secret:
          defaultMode: 420
          optional: false
          secretName: gitlab-registry-auth
