apps/gitlab/deployment-default-gitlab-sidekiq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitlab
    component: sidekiq
  name: gitlab-sidekiq
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: gitlab
      component: sidekiq
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        elastic.co/dataset: kubernetes.container_logs.gitlab
      labels:
        app: gitlab
        component: sidekiq
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: CONFIG_TEMPLATE_DIRECTORY
          value: /var/opt/gitlab/config/templates
        - name: CONFIG_DIRECTORY
          value: /srv/gitlab/config
        - name: GITLAB_HOST
          value: git.brmartin.co.uk
        - name: GITLAB_PORT
          value: '443'
        - name: GITLAB_HTTPS
          value: 'true'
        - name: ENABLE_BOOTSNAP
          value: '1'
        - name: SIDEKIQ_CONCURRENCY
          value: '5'
        - name: GITALY_TOKEN
          valueFrom:
            secretKeyRef:
              key: token
              name: gitlab-gitaly
              optional: false
        - name: GITLAB_SMTP_USERNAME
          valueFrom:
            secretKeyRef:
              key: SMTP_USERNAME
              name: gitlab-smtp-secret
              optional: false
        - name: GITLAB_SMTP_PASSWORD
          valueFrom:
            secretKeyRef:
              key: SMTP_PASSWORD
              name: gitlab-smtp-secret
              optional: false
        image: registry.gitlab.com/gitlab-org/build/cng/gitlab-sidekiq-ce:v18.11.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - pgrep
            - -f
            - sidekiq
          failureThreshold: 3
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        name: sidekiq
        ports:
        - containerPort: 8082
          name: metrics
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - pgrep
            - -f
            - sidekiq
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            memory: 2Gi
          requests:
            cpu: 150m
            memory: 1600Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/opt/gitlab/config/templates
          mountPropagation: None
          name: config-templates
        - mountPath: /srv/gitlab/public/uploads
          mountPropagation: HostToContainer
          name: uploads
        - mountPath: /srv/gitlab/shared
          mountPropagation: HostToContainer
          name: shared
        - mountPath: /etc/gitlab/postgres
          mountPropagation: None
          name: db-password
          readOnly: true
        - mountPath: /srv/gitlab/config/secrets.yml
          mountPropagation: None
          name: rails-secret
          readOnly: true
          subPath: secrets.yml
        - mountPath: /etc/gitlab/gitlab-shell
          mountPropagation: None
          name: shell-secret
          readOnly: true
        - mountPath: /etc/gitlab/gitlab-workhorse
          mountPropagation: None
          name: workhorse-secret
          readOnly: true
        - mountPath: /srv/gitlab/config/initializers/smtp_settings.rb
          mountPropagation: None
          name: smtp-config
          readOnly: true
          subPath: smtp_settings.rb
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: false
        runAsUser: 1000
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: gitlab-config-templates
          optional: false
        name: config-templates
      - name: uploads
        persistentVolumeClaim:
          claimName: gitlab-uploads-sw
      - name: shared
        persistentVolumeClaim:
          claimName: gitlab-shared-sw
      - name: db-password
        secret:
          defaultMode: 420
          items:
          - key: db_password
            path: password
          optional: false
          secretName: gitlab-secrets
      - name: rails-secret
        secret:
          defaultMode: 420
          optional: false
          secretName: gitlab-rails-secret
      - name: shell-secret
        secret:
          defaultMode: 420
          optional: false
          secretName: gitlab-shell
      - name: workhorse-secret
        secret:
          defaultMode: 420
          optional: false
          secretName: gitlab-workhorse
      - configMap:
          defaultMode: 420
          name: gitlab-smtp-config
          optional: false
        name: smtp-config
