apps/gitlab/deployment-default-gitlab-webservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitlab
    component: webservice
    gitlab.com/rails-registry-auth: "true"
    gitlab.com/rails-runtime: "true"
  name: gitlab-webservice
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: gitlab
      component: webservice
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        elastic.co/dataset: kubernetes.container_logs.gitlab
      labels:
        app: gitlab
        component: webservice
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: CONFIG_TEMPLATE_DIRECTORY
          value: /var/opt/gitlab/config/templates
        - name: CONFIG_DIRECTORY
          value: /srv/gitlab/config
        - name: GITLAB_WEBSERVER
          value: puma
        - name: GITLAB_HOST
          value: git.brmartin.co.uk
        - name: GITLAB_PORT
          value: '443'
        - name: GITLAB_HTTPS
          value: 'true'
        - name: ENABLE_BOOTSNAP
          value: '1'
        - name: ACTION_CABLE_IN_APP
          value: 'true'
        - name: WORKER_PROCESSES
          value: '1'
        - name: PUMA_THREADS_MIN
          value: '1'
        - name: PUMA_THREADS_MAX
          value: '4'
        - name: GITALY_TOKEN
          valueFrom:
            secretKeyRef:
              key: token
              name: gitlab-gitaly
              optional: false
        - name: GITLAB_SMTP_USERNAME
          valueFrom:
            secretKeyRef:
              key: SMTP_USERNAME
              name: gitlab-smtp-secret
              optional: false
        - name: GITLAB_SMTP_PASSWORD
          valueFrom:
            secretKeyRef:
              key: SMTP_PASSWORD
              name: gitlab-smtp-secret
              optional: false
        image: registry.gitlab.com/gitlab-org/build/cng/gitlab-webservice-ce:placeholder
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /-/liveness
            port: 8080
            scheme: HTTP
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        name: webservice
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8082
          name: metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /-/readiness
            port: 8080
            scheme: HTTP
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        resources:
          limits:
            memory: 3Gi
          requests:
            cpu: 75m
            memory: 2100Mi
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /-/readiness
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /srv/gitlab/public/uploads
          mountPropagation: HostToContainer
          name: uploads
        - mountPath: /srv/gitlab/shared
          mountPropagation: HostToContainer
          name: shared
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: false
        runAsUser: 1000
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
      - name: uploads
        persistentVolumeClaim:
          claimName: gitlab-uploads-sw
      - name: shared
        persistentVolumeClaim:
          claimName: gitlab-shared-sw
