apps/gitlab/deployment-default-gitlab-workhorse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitlab
    component: workhorse
  name: gitlab-workhorse
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: gitlab
      component: workhorse
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        elastic.co/dataset: kubernetes.container_logs.gitlab
      labels:
        app: gitlab
        component: workhorse
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: CONFIG_TEMPLATE_DIRECTORY
          value: /var/opt/gitlab/config/templates
        - name: CONFIG_DIRECTORY
          value: /srv/gitlab/config
        - name: GITLAB_WORKHORSE_EXTRA_ARGS
          value: -authBackend http://gitlab-webservice:8080 -cableBackend http://gitlab-webservice:8080
            -apiCiLongPollingDuration 50s
        image: registry.gitlab.com/gitlab-org/build/cng/gitlab-workhorse-ce:placeholder
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /-/liveness
            port: 8181
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        name: workhorse
        ports:
        - containerPort: 8181
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 6
          httpGet:
            path: /-/readiness
            port: 8181
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 32Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/opt/gitlab/config/templates
          mountPropagation: None
          name: workhorse-config
        - mountPath: /etc/gitlab/gitlab-workhorse
          mountPropagation: None
          name: workhorse-secret
          readOnly: true
        - mountPath: /srv/gitlab/public/uploads
          mountPropagation: HostToContainer
          name: uploads
        - mountPath: /srv/gitlab/shared
          mountPropagation: HostToContainer
          name: shared
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: false
        runAsUser: 1000
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: workhorse-config
          optional: false
        name: workhorse-config
      - name: workhorse-secret
        secret:
          defaultMode: 420
          optional: false
          secretName: gitlab-workhorse
      - name: uploads
        persistentVolumeClaim:
          claimName: gitlab-uploads-sw
      - name: shared
        persistentVolumeClaim:
          claimName: gitlab-shared-sw
