apps/gitlab/service-default-gitlab-redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitlab
    component: redis
  name: gitlab-redis
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: gitlab
    component: redis
  sessionAffinity: None
  type: ClusterIP
