apps/gitlab/service-default-gitlab-registry-internal.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitlab
    component: registry
  name: gitlab-registry-internal
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 443
    protocol: TCP
    targetPort: 5000
  selector:
    app: gitlab
    component: registry
  sessionAffinity: None
  type: ClusterIP
