apps/gitlab/service-default-gitlab-registry.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitlab
    component: registry
  name: gitlab-registry
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: gitlab
    component: registry
  sessionAffinity: None
  type: ClusterIP
