apps/gitlab/service-default-gitlab-webservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitlab
    component: webservice
  name: gitlab-webservice
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: metrics
    port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    app: gitlab
    component: webservice
  sessionAffinity: None
  type: ClusterIP
