apps/gitlab/ingressroute-default-gitlab.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: gitlab
  name: gitlab
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`git.brmartin.co.uk`)
    services:
    - name: gitlab-workhorse
      port: 8181
  tls:
    secretName: wildcard-brmartin-tls
